--- a/views/admin/_headder.ejs
+++ b/views/admin/_headder.ejs
@@ -2,34 +2,6 @@
 <!-- ##### Header Area Start ##### -->
 <header class="header-area">
 
-    <!-- ***** Top Header Area ***** -->
-    <div class="top-header-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="top-header-content d-flex align-items-center justify-content-between">
-                        <!-- Top Header Content -->
-                        <div class="top-header-meta">
-                            
-                        </div>
-
-                        <!-- Top Header Content -->
-                        <div class="top-header-meta d-flex">
-                            <!-- Login -->
-                            <div class="login">
-                                <a href="/admin/logout"><i class="fa fa-user" aria-hidden="true"></i> <span>LogOut</span></a>
-                            </div>
-                            <!-- account -->
-                            <div class="login">
-                                <a href="/admin/dashboard"><i class="fa fa-user" aria-hidden="true"></i> <span>Account</span></a>
-                            </div>
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- ***** Navbar Area ***** -->
     <div class="alazea-main-menu">
@@ -58,10 +30,11 @@
                         <div class="classynav">
                             <ul>
                                 <li><a href="/">Home</a></li>
-                                <li><a href="/">Orders</a></li>
+                                <li><a href="/order/all">Orders</a></li>
                                 <li><a href="/admin/gallery">All Products</a></li>
                                 <li><a href="/admin/new">New Product</a></li>
                                 <li><a href="/admin/dashboard">Account</a></li>
+                                <li><a href="/admin/logout">Logout</a></li>
                             </ul>
                         </div>
                         <!-- Navbar End -->
