--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -1,5 +1,32 @@
 <div class="container">
-    <h2>All Orders</h2>
+    <h2>Orders</h2>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item <% if(filter=="all"){%>active<%} %> ">
+              <a class="nav-link" href="/order/all">All Orders <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item <% if(filter=="pending"){%>active<%} %> ">
+              <a class="nav-link" href="/order/pending">Pending</a>
+            </li>
+            <li class="nav-item <% if(filter=="processing"){%>active<%} %>" >
+              <a class="nav-link" href="/order/processing">Processing</a>
+            </li>
+            <li class="nav-item <% if(filter=="delivering"){%>active<%} %>" >
+              <a class="nav-link" href="/order/delivering">Delivering</a>
+            </li>
+            <li class="nav-item <% if(filter=="completed"){%>active<%} %>" >
+                <a class="nav-link" href="/order/completed">Completed</a>
+            </li>
+            <li class="nav-item <% if(filter=="canceled"){%>active<%} %>" >
+                <a class="nav-link" href="/order/canceled">Canceled</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+
     <table class="table">
         <thead class="thead-dark">
           <tr>
@@ -31,7 +58,7 @@
                             <%=order.state%> 
                         </td>
                         <td style="vertical-align: middle;">
-                            total
+                            <%=order.total%> 
                         </td>
                         <td style="vertical-align: middle;">
                             <%=order.user.firstName %> 
