--- a/views/index/homePage.ejs
+++ b/views/index/homePage.ejs
@@ -14,8 +14,8 @@
                             <h2>Plantasy is the place for your 'plant-fantasy' and we will make you</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque ante nec ipsum iaculis, ac iaculis ipsum porttitor. Vivamus cursus nisl lectus, id mattis nisl lobortis eu. Duis diam augue, dapibus ut dolor at, mattis maximus dolor.</p>
                             <div class="welcome-btn-group">
-                                <a href="#" class="btn alazea-btn mr-30">Start Shopping</a>
-                                <a href="#" class="btn alazea-btn active">CONTACT US</a>
+                                <a href="/gallery" class="btn alazea-btn mr-30">Start Shopping</a>
+                                <a href="/feedbacks" class="btn alazea-btn active">See our customer reviews</a>
                             </div>
                         </div>
                     </div>
