--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -48,7 +48,9 @@
     </div>
     <% } %>  
 
-
+     
+    <%- include('../_error') %>
+    <%- include('../_success') %>
     <!-- replace body -->
     <%- body %>
     
