--- a/views/admin/_headder.ejs
+++ b/views/admin/_headder.ejs
@@ -30,6 +30,7 @@
                         <div class="classynav">
                             <ul>
                                 <li><a href="/">Home</a></li>
+                                <li><a href="/report">Reports</a></li>
                                 <li><a href="/order/all">Orders</a></li>
                                 <li><a href="/admin/gallery">All Products</a></li>
                                 <li><a href="/admin/new">New Product</a></li>
