--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -1,18 +1,32 @@
 
-
-
-<center>
-    <%- include('../_error') %> 
-    <div class="row-cols-md-4">
-        <form class="form-signin" action="/admin/login" method="POST">
-            <h1 class="h3 mb-3 font-weight-normal">Admin Login</h1>
-            <label class="sr-only">Email</label>
-            <input type="text" class="form-control" placeholder="Enter User Name" name="userName" >
-            <label  class="sr-only">Password</label>
-            <input type="password"  class="form-control" placeholder="Enter Password" name="password">
-            <br>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        </form>
-    </div>
- </center>
-<br>
+<% if(admin){%>
+    <center>
+        <div class="row-cols-md-4">
+            <form class="form-signin" action="/admin/login" method="POST">
+                <h1 class="h3 mb-3 font-weight-normal">Admin Login</h1>
+                <label class="sr-only">User Name</label>
+                <input type="text" class="form-control" placeholder="Enter User Name" name="userName" >
+                <label  class="sr-only">Password</label>
+                <input type="password"  class="form-control" placeholder="Enter Password" name="password">
+                <br>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            </form>
+        </div>
+     </center>
+    <br>
+<%} else{%> 
+    <center>
+        <div class="row-cols-md-4">
+            <form class="form-signin" action="/admin/register" method="POST">
+                <h1 class="h3 mb-3 font-weight-normal">Register New Admin</h1>
+                <label class="sr-only">User Name</label>
+                <input type="text" class="form-control" placeholder="Enter User Name" name="userName" required>
+                <label  class="sr-only">Password</label>
+                <input type="password"  class="form-control" placeholder="Enter Password" name="password" required>
+                <br>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+            </form>
+        </div>
+     </center>
+    <br>
+<% } %> 
